--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ img {
         <img src="https://cdn-icons-png.flaticon.com/512/2118/2118701.png" width="300" height="300">
         <div class="details">
           <h3 style="text-align: center;">Multiplayer </h3>
-          <a href="https://github.com/sreya01/tic-tac-toe/blob/main/singleplayer.html" class="btn btn-primary" class="btn btn-primary" style="display: flex; justify-content: center;">Visit Website</a>
+          <a href="https://sreya01.github.io/tic-tac-toe/multiplayer.html" class="btn btn-primary" class="btn btn-primary" style="display: flex; justify-content: center;">Visit Website</a>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@ img {
         <img src="https://cdn-icons-png.flaticon.com/512/3381/3381949.png" width="300" height="300"  >
         <div class="details">
           <h3 style="text-align: center;"> Singleplayer</h3>
-          <a href="https://github.com/sreya01/tic-tac-toe/blob/main/multiplayer.html" class="btn btn-primary" style="display: flex; justify-content: center;">Visit Website</a>
+          <a href="https://sreya01.github.io/tic-tac-toe/singleplayer.html" class="btn btn-primary" style="display: flex; justify-content: center;">Visit Website</a>
 <br>
 <br><br>
         </div>
